# fetchCryptoPrice

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json
src/: database_mod.rs  lib.rs  main.rs
src/aggregatedPrice/: Exchange.rs  binance.rs  bybit.rs  coingecko.rs  cryptopair.rs  kraken.rs  mod.rs  okx.rs  pricedata.rs
src/cryptoPrice/: merge.rs
src/transaction/: mod.rs  sendtx.rs
