[package]
name = "crypto_prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = {version= "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
env_logger = "0.11.5"
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust", features = ["enable-hyper", "enable-tokio-tungstenite"] }
log = "0.4.22"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.24.0" , features = ["rustls-tls-native-roots"]}

url = "2.5.2"
tokio-native-tls = "0.3.1"
native-tls = "0.2.12"
tokio-socks = "0.5.2"
reqwest-websocket = "0.4.2"
futures = { version = "0.3" }
time = "0.3.36"
ethers = "2.0"
eyre = "0.6.8"
hex = "0.4.3"
dotenv = "0.15.0"
bytes = "1.7.2"  # 添加 dotenv crate
hex-literal = "0.4.1"
mysql = "25.0.1"
diesel = { version = "2.2.4", features = ["mysql"] }
chrono = "0.4.38"
